--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -45,8 +45,8 @@ jobs:
         include:
           - language: actions
             build-mode: none
-          - language: java-kotlin
-            build-mode: manual # Changed from autobuild to manual
+          # - language: java-kotlin
+          #   build-mode: manual # Changed from autobuild to manual
           - language: javascript-typescript
             build-mode: none
           - language: python
