--- a/next-frontend/package.json
+++ b/next-frontend/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "next": "15.4.5"
+    "next": "15.4.5",
+    "lucide-react": "0.539.0"
   },
   "devDependencies": {
     "typescript": "^5.9.2",
