--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,9 +13,9 @@ name: "CodeQL Advanced"
 
 on:
   push:
-    branches: ["dev"]
+    branches: ["dev", "main"]
   pull_request:
-    branches: ["dev"]
+    branches: ["dev", "main"]
   schedule:
     - cron: "25 19 * * 0"
 
@@ -45,8 +45,8 @@ jobs:
         include:
           - language: actions
             build-mode: none
-          # - language: java-kotlin
-          #   build-mode: manual # Changed from autobuild to manual
+          - language: java-kotlin
+            build-mode: manual # Changed from autobuild to manual
           - language: javascript-typescript
             build-mode: none
           - language: python
