--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -144,7 +144,7 @@ jobs:
 
       - name: Create local.properties file
         run: |
-          echo "map_api_key=${{ secrets.MAP_API_KEY }}" > android-kotlin/local.properties
+          echo "MAPS_API_KEY=${{ secrets.MAP_API_KEY }}" > android-kotlin/local.properties
           echo "sdk.dir=$ANDROID_HOME" >> android-kotlin/local.properties
 
       - name: 🤖 Setup Android SDK
