--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -35,3 +35,6 @@ jwt.expiration-in-ms=${JWT_EXPIRATION:3600000}
 
 # Custom app config
 chatbot.strategy=${CHATBOT_STRATEGY:proxy}
+
+firebase.service.account.path=firebase-service-account.json
+
