added firebase secret path to environment file

--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -36,5 +36,5 @@ jwt.expiration-in-ms=${JWT_EXPIRATION:3600000}
 # Custom app config
 chatbot.strategy=${CHATBOT_STRATEGY:proxy}
 
-firebase.service.account.path=firebase-service-account.json
+firebase.service.account.path=${FIREBASE_SECRET_PATH}
 
