--- a/android-kotlin/feature_navigateBar/src/main/AndroidManifest.xml
+++ b/android-kotlin/feature_navigateBar/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         <activity
             android:name=".menu.FAQActivity"
             android:exported="false" />
+        <activity
+            android:name=".location.ShowSavedLocationsActivity"
+            android:exported="false"/>
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
