--- a/android-kotlin/feature_notification/src/main/AndroidManifest.xml
+++ b/android-kotlin/feature_notification/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
-
+        <receiver android:name="iss.nus.edu.sg.appfiles.feature_notification.broadcast_receiver.NotificationActionReceiver" />
     </application>
 
 </manifest>
