fix: fix small issues until app works

--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -37,3 +37,5 @@ jwt.expiration-in-ms=${JWT_EXPIRATION:3600000}
 # Custom app config
 chatbot.strategy=${CHATBOT_STRATEGY:proxy}
 chatbot.proxy.base-url=${CHATBOT_PROXY_URL}
+
+firebase.service.account.path=${FIREBASE_SECRET_PATH}
