--- a/android-kotlin/feature_saveRoute/src/main/AndroidManifest.xml
+++ b/android-kotlin/feature_saveRoute/src/main/AndroidManifest.xml
@@ -13,15 +13,7 @@
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
-        <activity
-            android:name=".SavedRoutesActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <!-- SavedRoutesActivity removed - functionality moved to SchedulesFragment -->
         <activity android:name=".AddEditRouteActivity"
             android:exported="true"
             />
