--- a/infra/ansible/files/nginx.conf
+++ b/infra/ansible/files/nginx.conf
@@ -18,9 +18,24 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
     
-    location = /prometheus {
-        return 301 /prometheus/;
+    location /prometheus/ {
+        proxy_pass http://prometheus:9090/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+
+        # Add CORS headers
+        add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' '*' always;
+
+        # Handle preflight OPTIONS requests
+        if ($request_method = 'OPTIONS') {
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
     }
+
     
     location /prometheus/ {
         proxy_pass http://prometheus:9090/;
