--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -55,54 +55,60 @@ jobs:
           tags: frontend:${{ env.IMAGE_TAG }}
           cache-from: type=gha
 
-      - name: Run Trivy vulnerability scanner - Frontend
-        if: ${{ inputs.security_scan_enabled }}
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: frontend:${{ env.IMAGE_TAG }}
-          format: "sarif"
-          output: "trivy-frontend-results.sarif"
+      # - name: Run Trivy vulnerability scanner - Frontend
+      #   if: ${{ inputs.security_scan_enabled }}
+      #   uses: aquasecurity/trivy-action@master
+      #   with:
+      #     image-ref: frontend:${{ env.IMAGE_TAG }}
+      #     format: "sarif"
+      #     output: "trivy-frontend-results.sarif"
 
-      - name: Upload Trivy scan results to GitHub Security tab - Frontend
-        if: ${{ inputs.security_scan_enabled && always() }}
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: "trivy-frontend-results.sarif"
-          token: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Upload Trivy scan results to GitHub Security tab - Frontend
+      #   if: ${{ inputs.security_scan_enabled && always() }}
+      #   uses: github/codeql-action/upload-sarif@v3
+      #   with:
+      #     sarif_file: "trivy-frontend-results.sarif"
+      #     token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Run Trivy vulnerability scanner (Table) - Frontend
-        if: ${{ inputs.security_scan_enabled }}
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: frontend:${{ env.IMAGE_TAG }}
-          format: "table"
-          exit-code: ${{ inputs.fail_on_high_severity && '1' || '0' }}
-          severity: "CRITICAL,HIGH"
+      # - name: Run Trivy vulnerability scanner (Table) - Frontend
+      #   if: ${{ inputs.security_scan_enabled }}
+      #   uses: aquasecurity/trivy-action@master
+      #   with:
+      #     image-ref: frontend:${{ env.IMAGE_TAG }}
+      #     format: "table"
+      #     exit-code: ${{ inputs.fail_on_high_severity && '1' || '0' }}
+      #     severity: "CRITICAL,HIGH"
 
-      - name: Run Trivy vulnerability scanner (JSON) - Frontend
-        if: ${{ inputs.security_scan_enabled }}
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: frontend:${{ env.IMAGE_TAG }}
-          format: "json"
-          output: "trivy-frontend-results.json"
+      # - name: Run Trivy vulnerability scanner (JSON) - Frontend
+      #   if: ${{ inputs.security_scan_enabled }}
+      #   uses: aquasecurity/trivy-action@master
+      #   with:
+      #     image-ref: frontend:${{ env.IMAGE_TAG }}
+      #     format: "json"
+      #     output: "trivy-frontend-results.json"
 
-      - name: Upload Trivy security report - Frontend
-        if: ${{ inputs.security_scan_enabled && always() }}
-        uses: actions/upload-artifact@v4
-        with:
-          name: trivy-frontend-security-report
-          path: trivy-frontend-results.json
+      # - name: Upload Trivy security report - Frontend
+      #   if: ${{ inputs.security_scan_enabled && always() }}
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: trivy-frontend-security-report
+      #     path: trivy-frontend-results.json
+
+      # - name: Log in to DockerHub
+      #   if: success() || !inputs.security_scan_enabled
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Log in to DockerHub
-        if: success() || !inputs.security_scan_enabled
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push Frontend Image to Registry
-        if: success() || !inputs.security_scan_enabled
+        # if: success() || !inputs.security_scan_enabled
         uses: docker/build-push-action@v5
         with:
           context: ./next-frontend
@@ -135,56 +141,56 @@ jobs:
           tags: backend:${{ env.IMAGE_TAG }}
           cache-from: type=gha
 
-      - name: Run Trivy vulnerability scanner - Backend
-        if: ${{ inputs.security_scan_enabled }}
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: backend:${{ env.IMAGE_TAG }}
-          format: "sarif"
-          output: "trivy-backend-results.sarif"
+      # - name: Run Trivy vulnerability scanner - Backend
+      #   if: ${{ inputs.security_scan_enabled }}
+      #   uses: aquasecurity/trivy-action@master
+      #   with:
+      #     image-ref: backend:${{ env.IMAGE_TAG }}
+      #     format: "sarif"
+      #     output: "trivy-backend-results.sarif"
 
-      - name: Upload Trivy scan results to GitHub Security tab - Backend
-        if: ${{ inputs.security_scan_enabled && always() }}
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: "trivy-backend-results.sarif"
-          token: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Upload Trivy scan results to GitHub Security tab - Backend
+      #   if: ${{ inputs.security_scan_enabled && always() }}
+      #   uses: github/codeql-action/upload-sarif@v3
+      #   with:
+      #     sarif_file: "trivy-backend-results.sarif"
+      #     token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Run Trivy vulnerability scanner (Table) - Backend
-        if: ${{ inputs.security_scan_enabled }}
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: backend:${{ env.IMAGE_TAG }}
-          format: "table"
-          exit-code: ${{ inputs.fail_on_high_severity && '1' || '0' }}
-          severity: "CRITICAL,HIGH"
+      # - name: Run Trivy vulnerability scanner (Table) - Backend
+      #   if: ${{ inputs.security_scan_enabled }}
+      #   uses: aquasecurity/trivy-action@master
+      #   with:
+      #     image-ref: backend:${{ env.IMAGE_TAG }}
+      #     format: "table"
+      #     exit-code: ${{ inputs.fail_on_high_severity && '1' || '0' }}
+      #     severity: "CRITICAL,HIGH"
 
-      - name: Run Trivy vulnerability scanner (JSON) - Backend
-        if: ${{ inputs.security_scan_enabled }}
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: backend:${{ env.IMAGE_TAG }}
-          format: "json"
-          output: "trivy-backend-results.json"
+      # - name: Run Trivy vulnerability scanner (JSON) - Backend
+      #   if: ${{ inputs.security_scan_enabled }}
+      #   uses: aquasecurity/trivy-action@master
+      #   with:
+      #     image-ref: backend:${{ env.IMAGE_TAG }}
+      #     format: "json"
+      #     output: "trivy-backend-results.json"
 
-      - name: Upload Trivy scan results as artifact - Backend
-        if: ${{ inputs.security_scan_enabled && always() }}
-        uses: actions/upload-artifact@v4
-        with:
-          name: trivy-backend-results
-          path: |
-            trivy-backend-results.sarif
-            trivy-backend-results.json
+      # - name: Upload Trivy scan results as artifact - Backend
+      #   if: ${{ inputs.security_scan_enabled && always() }}
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: trivy-backend-results
+      #     path: |
+      #       trivy-backend-results.sarif
+      #       trivy-backend-results.json
 
       - name: Log in to DockerHub
-        if: success() || !inputs.security_scan_enabled
+        # if: success() || !inputs.security_scan_enabled
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push Backend Image to Registry
-        if: success() || !inputs.security_scan_enabled
+        # if: success() || !inputs.security_scan_enabled
         uses: docker/build-push-action@v5
         with:
           context: ./spring-backend
