--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.config.import=optional:file:.env[.properties]
+spring.devtools.restart.exclude=com/example/springbackend/service/AuthService.class
 
 # Enable debugging
 debug=true
