feat(web): some bot data

--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -11,8 +11,9 @@ logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.boot.autoconfigure.logging.ConditionEvaluationReportLogger=INFO
 
 
-management.endpoints.web.exposure.include=health,prometheus
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
 management.endpoint.health.show-details=always
+management.endpoint.metrics.enabled=true
 
 # Application
 spring.application.name=spring-backend
