feat(scheduler): notifications working now

--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -19,6 +19,7 @@ management.endpoint.metrics.enabled=true
 spring.application.name=spring-backend
 server.port=8080
 server.address=0.0.0.0
+spring.devtools.restart.enabled=false
 
 spring.data.mongodb.uri=${MONGODB_URI:mongodb://localhost:27017/simbus-mongo}
 
