feat(nginx): expose /actuator route

--- a/infra/ansible/files/nginx.conf
+++ b/infra/ansible/files/nginx.conf
@@ -23,6 +23,12 @@ server {
         return 301 /grafana/;
     }
 
+    location /actuator/ {
+        proxy_pass http://backend:8080/actuator/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
     # Main Grafana location block
     location /grafana/ {
         proxy_set_header Host $http_host;
