fix: unit test bugs

--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -13,7 +13,7 @@ logging.level.org.springframework.boot.autoconfigure.logging.ConditionEvaluation
 
 management.endpoints.web.exposure.include=health,info,metrics,prometheus
 management.endpoint.health.show-details=always
-management.endpoint.metrics.enabled=true
+management.endpoint.metrics.access=permitAll
 
 # Application
 spring.application.name=spring-backend
