fix: actuator pathing

--- a/infra/ansible/files/nginx.conf
+++ b/infra/ansible/files/nginx.conf
@@ -12,7 +12,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
 
-    location /api/actuator {
+    location /actuator {
         proxy_pass http://backend:3000/actuator;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
