--- a/infra/ansible/files/nginx.conf
+++ b/infra/ansible/files/nginx.conf
@@ -12,11 +12,12 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
 
-    location /actuator {
-        proxy_pass http://backend:3000/actuator;
+    location /actuator/ {
+        proxy_pass http://backend:8080/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
+
 
     location /api/ {
         proxy_pass http://backend:8080;
