--- a/infra/ansible/files/nginx.conf
+++ b/infra/ansible/files/nginx.conf
@@ -13,7 +13,7 @@ server {
     }
 
     location /actuator/ {
-        proxy_pass http://backend:8080/;
+        proxy_pass http://backend:8080/actuator;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
