--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -28,13 +28,8 @@ jobs:
       - name: Super-linter
         uses: super-linter/super-linter/slim@v8.0.0
         env:
-          VALIDATE_JAVA: true
-          VALIDATE_KOTLIN: true
-          VALIDATE_PYTHON: true
-          VALIDATE_JAVASCRIPT_ES: true
-          VALIDATE_TYPESCRIPT: true
+          VALIDATE_GITLEAKS: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_ALL_CODEBASE: ${{ github.event_name == 'pull_request' && 'true' || 'false' }}
-          # Scan changed files on feature branches, all files on PRs
 
         continue-on-error: true
