--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -120,6 +120,7 @@ jobs:
           file: spring-backend/target/site/jacoco/jacoco.xml
           flags: backend
           name: spring-backend-coverage
+          overwrite: true
 
       - name: 📊 Upload JaCoCo Coverage Report
         uses: actions/upload-artifact@v4
